src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  -webkit-user-select: none;
  margin: 0;
}

#app {
  @apply flex h-full;
}

body {
  @apply rounded;
}

input {
  outline: none;
  border: none;
}

*::-webkit-scrollbar {
  @apply w-1 h-1;
}

*::-webkit-scrollbar-track {
  @apply hidden;
}

*::-webkit-scrollbar-thumb {
  @apply bg-gray-400 rounded;
}

